--- a/style.css
+++ b/style.css
@@ -38,3 +38,13 @@ header h2 {
   border: none;
   border: 1px solid rgb(74, 68, 131);
 }
+
+.search-form button {
+  border: none;
+  padding: 0.5rem;
+  font-size: 1rem;
+  background: rgb(74, 68, 131);
+  color: white;
+  width: 30%;
+  cursor: pointer;
+}
